# SimTools

./: .gitignore
areeepo/: pyproject.toml  test01_proj.py
areeepo/src/areeepo/: __init__.py  halo_mergertree_utils.py  io.py  utils.py  visual.py
niceplot/: pyproject.toml
niceplot/src/niceplot/: __init__.py
niceplot/src/niceplot/styles/: bismuth.mplstyle
