[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "niceplot"
version = "0.0.1"
authors = [
  { name="Patrick Hirling"},
]
description = "Better looking plots"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/phirling/arepo-tools"
Issues = "https://github.com/phirling/arepo-tools/issues"